src/objects/Apttus_Config2__ProductInformation__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__ContentUrl__c</fullName>
        <description>The information content url</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The information description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EmbedCode__c</fullName>
        <description>Represents code for embedded audio or video.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter embed code for video. For example 
&lt;iframe id=&quot;youtube&quot; style=&quot;display: none;&quot; title=&quot;YouTube video player&quot; width=&quot;640&quot; height=&quot;390&quot; src=&quot;http://www.youtube.com/embed/UZnP6prUWsU&quot; frameborder=&quot;0&quot; allowfullscreen&gt;&lt;/iframe&gt;</inlineHelpText>
        <label>Embed Code</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FileId__c</fullName>
        <description>Holds information about uploaded file</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File</label>
        <length>32</length>
        <type>Text</type>
    </fields>
</CustomObject>